--- a/scss/style.scss
+++ b/scss/style.scss
@@ -258,13 +258,13 @@ h2 {
   color: #9a3820;
 }
 //Para una sola page
-/*.a-cris-submenu:hover {
+.a-cris-submenu:hover {
   color: white;
-}*/
+}
 
-/*.a-cris-submenu:active {
+.a-cris-submenu:active {
   color: white;
-}*/
+}
 
 .bts-sub {
   background: #9a3820;
