adding logo cris

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -190,7 +190,7 @@ h2 {
   background-image: url("/assets/Images/arrow-down.svg") !important;
 }*/
 .navbar-light .navbar-toggler-icon {
-  background-image: url("/assets/Images/burger-icon.svg") !important;
+  background-image: url("./assets/Images/burger-icon.svg") !important;
 }
 
 .dropdown-item {
