adding logo cris

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ h2 {
   color: #9a3820; }
 
 .a-cris-submenu:hover {
-  color: white; }
+  color: #9a3820; }
 
 .a-cris-submenu:active {
   color: white; }
