--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ h2 {
   background-image: url("/assets/Images/arrow-down.svg") !important;
 }*/
 .navbar-light .navbar-toggler-icon {
-  background-image: url("./assets/Images/burger-icon.svg") !important; }
+  background-image: url("../assets/Images/burger-icon.svg") !important; }
 
 .dropdown-item {
   background-color: transparent !important; }
