--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ body {
   padding-left: 1rem;
   font-size: 1.125rem; }
 
+.active-menu {
+  color: #f29754 !important; }
+
 .ad {
   background-color: #f29754;
   color: #993921;
@@ -314,6 +317,84 @@ a.bts-sub:hover {
   border-radius: 3px;
   border: none; }
 
+/*Blog*/
+.dropdown-toggle-blog {
+  background: #ce684f;
+  width: 8.5rem;
+  line-height: 1.5rem;
+  color: white !important; }
+
+.dropdown-blog {
+  background: #fffdfb;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  min-width: 7rem;
+  text-align: center;
+  width: 8.5rem; }
+
+.dropdown-item-blog {
+  color: black !important;
+  font-size: 0.75rem !important;
+  line-height: 1.5rem !important;
+  padding: 0;
+  text-align: center;
+  width: 8.5rem; }
+
+.card-blog-top {
+  font-size: 0.75rem;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
+  border-radius: 16px;
+  position: relative;
+  z-index: -1;
+  margin-bottom: -1rem; }
+
+.btn-primary-blog {
+  font-size: 0.75rem;
+  background: #9a3820;
+  border-radius: 3px;
+  border: none; }
+
+.card-blog-title {
+  font-weight: bold;
+  line-height: 20px; }
+
+.card-blog-text {
+  line-height: 13px; }
+
+h4 {
+  font-weight: bold !important;
+  font-size: 1.125rem !important; }
+
+.body-card-blog {
+  background: #fafafa;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.14);
+  border-radius: 16px;
+  position: relative;
+  z-index: -1;
+  margin-bottom: -1rem; }
+
+.title-body-card {
+  font-size: 0.625rem;
+  line-height: 20px;
+  font-weight: bold; }
+
+.contain-body-card {
+  font-size: 0.625rem;
+  line-height: 13px; }
+
+a.btn-primary-blog {
+  color: white !important;
+  background: #9a3820 !important; }
+
+a.dropdown-item-blog {
+  padding-left: 0; }
+
+a.dropdown-item-blog:hover {
+  color: #f29754 !important; }
+
+.a-blog-button {
+  color: #f29754 !important; }
+
 @media only screen and (max-width: 992px) {
   .navbar-mov {
     position: fixed;
@@ -340,7 +421,7 @@ a.bts-sub:hover {
   .navbar-light .navbar-nav .nav-link.active,
   .navbar-light .navbar-nav .nav-link.show,
   .navbar-light .navbar-nav .show > .nav-link {
-    color: white; }
+    color: white !important; }
 
   .dropdown-item:hover {
     color: #9a3820; }
@@ -365,7 +446,13 @@ a.bts-sub:hover {
     padding-left: 2rem !important; }
 
   .first-card-container {
-    padding-left: 3rem; } }
+    padding-left: 3rem; }
+
+  .card-blog-right {
+    padding-right: 0.5rem; }
+
+  .card-blog-left {
+    padding-left: 0.5rem; } }
 @media only screen and (min-width: 993px) {
   .carousel-exp {
     height: 520px; }
@@ -473,8 +560,11 @@ a.bts-sub:hover {
   .first-card-container {
     font-size: 1.125rem; }
 
-  .title-course .title-course {
+  .title-course {
     text-align: center;
-    padding-left: 0rem; } }
+    padding-left: 0rem; }
+
+  .card-col {
+    margin: 0.05rem; } }
 
 /*# sourceMappingURL=style.css.map */
