--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,14 +53,39 @@ body {
   font-size: 1.125rem;
 }
 
+.active-menu {
+  color: #f29754 !important;
+}
+
 .ad {
   background-color: #f29754;
   color: #993921;
   font-size: 1.5rem;
   font-weight: bold;
   margin-top: 2.5rem;
+  // padding-top: 3.3rem;
   padding-top: 4.3rem;
 }
+//.title-ad {
+// font-size: 0.65rem;
+// color: #9a3820;
+// font-weight: bold;
+//}
+
+//.subtitle-ad {
+//  font-size: 1rem;
+// color: white;
+//}
+
+//.button-ad-container {
+//  font-size: 0.5rem;
+//}
+
+//.button-ad {
+// background: #e7600d;
+// box-shadow: 0px 4px 4px #9a3820;
+// padding: 0.1rem;
+//}
 
 .introduction {
   font-size: 0.875rem;
@@ -385,6 +410,102 @@ a.bts-sub:hover {
   border: none;
 }
 
+/*Blog*/
+
+.dropdown-toggle-blog {
+  background: #ce684f;
+  width: 8.5rem;
+  line-height: 1.5rem;
+  color: white !important;
+}
+
+.dropdown-blog {
+  background: #fffdfb;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  min-width: 7rem;
+  text-align: center;
+  width: 8.5rem;
+}
+
+.dropdown-item-blog {
+  color: black !important;
+  font-size: 0.75rem !important;
+  line-height: 1.5rem !important;
+  padding: 0;
+  text-align: center;
+  width: 8.5rem;
+}
+
+.card-blog-top {
+  font-size: 0.75rem;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12),
+    0px 2px 4px rgba(0, 0, 0, 0.14);
+  border-radius: 16px;
+  position: relative;
+  z-index: -1;
+  margin-bottom: -1rem;
+}
+
+.btn-primary-blog {
+  font-size: 0.75rem;
+  background: #9a3820;
+  border-radius: 3px;
+  border: none;
+}
+
+.card-blog-title {
+  font-weight: bold;
+  line-height: 20px;
+}
+
+.card-blog-text {
+  line-height: 13px;
+}
+
+h4 {
+  font-weight: bold !important;
+  font-size: 1.125rem !important;
+}
+
+.body-card-blog {
+  background: #fafafa;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12),
+    0px 2px 4px rgba(0, 0, 0, 0.14);
+  border-radius: 16px;
+  position: relative;
+  z-index: -1;
+  margin-bottom: -1rem;
+}
+
+.title-body-card {
+  font-size: 0.625rem;
+  line-height: 20px;
+  font-weight: bold;
+}
+
+.contain-body-card {
+  font-size: 0.625rem;
+  line-height: 13px;
+}
+
+a.btn-primary-blog {
+  color: white !important;
+  background: #9a3820 !important;
+}
+
+a.dropdown-item-blog {
+  padding-left: 0;
+}
+
+a.dropdown-item-blog:hover {
+  color: #f29754 !important;
+}
+
+.a-blog-button {
+  color: #f29754 !important;
+}
+
 @media only screen and (max-width: 992px) {
   .navbar-mov {
     position: fixed;
@@ -414,7 +535,7 @@ a.bts-sub:hover {
   .navbar-light .navbar-nav .nav-link.active,
   .navbar-light .navbar-nav .nav-link.show,
   .navbar-light .navbar-nav .show > .nav-link {
-    color: white;
+    color: white !important;
   }
   .dropdown-item:hover {
     color: #9a3820;
@@ -447,6 +568,14 @@ a.bts-sub:hover {
 
   .first-card-container {
     padding-left: 3rem;
+  }
+
+  .card-blog-right {
+    padding-right: 0.5rem;
+  }
+
+  .card-blog-left {
+    padding-left: 0.5rem;
   }
 }
 
@@ -581,9 +710,11 @@ a.bts-sub:hover {
   }
 
   .title-course {
-    .title-course {
-      text-align: center;
-      padding-left: 0rem;
-    }
+    text-align: center;
+    padding-left: 0rem;
+  }
+
+  .card-col {
+    margin: 0.05rem;
   }
 }
