addin content to Cristina part 1

--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,35 @@ body {
   font-size: 1.5rem;
   font-weight: bold;
   margin-top: 2.5rem;
-  padding-top: 4.3rem; }
+  padding-top: 3.3rem; }
+
+.title-ad {
+  font-size: 0.75rem;
+  color: #9a3820;
+  font-weight: bold; }
+
+.subtitle-ad {
+  font-size: 1.125rem;
+  color: white; }
+
+.button-ad-container {
+  font-size: 0.594rem; }
+
+a.button-ad {
+  text-decoration: none; }
+
+a.button-ad:hover {
+  text-decoration: none;
+  background: #e7600d !important;
+  border: none !important; }
+
+.button-ad {
+  background: #e7600d;
+  box-shadow: 0px 4px 4px #9a3820;
+  padding: 0.1rem; }
+
+.black-text {
+  font-weight: bold; }
 
 .introduction {
   font-size: 0.875rem;
@@ -66,10 +94,13 @@ body {
   box-shadow: 0px 3px 4px #a07250;
   border-radius: 15px;
   color: rgba(255, 255, 255, 0.87);
-  padding-left: 2rem; }
+  padding-left: 2rem;
+  list-style-image: url("../assets/Images/prize 1.svg"); }
 
 .prizes-items {
-  line-height: 33px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  /* line-height: 33px; */
   letter-spacing: 0.16px;
   font-size: 0.875rem; }
 
@@ -112,7 +143,7 @@ h2 {
   font-size: 0.75rem; }
 
 .carousel-content {
-  font-size: 0.75rem; }
+  font-size: 0.7rem; }
 
 .carousel-div {
   padding-left: 1.5rem;
@@ -197,6 +228,39 @@ h2 {
 .cris-title {
   margin: 0; }
 
+.twitter-bio {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem; }
+
+.facebook-bio {
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem; }
+
+.youtube-bio {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem; }
+
+.instagram-bio {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem; }
+
+a.cris-links {
+  color: black; }
+
+.cris-links-container {
+  font-size: 0.875rem; }
+
+.span-bio {
+  color: #f29754; }
+
 /*Conf*/
 .cristina-dot {
   background: #fff5ed !important; }
@@ -211,6 +275,19 @@ h2 {
   padding-right: 0.2rem;
   padding-left: 0.2rem;
   text-decoration: none !important; }
+
+ul.li-conf {
+  padding-left: 1.5rem;
+  list-style-image: url("../assets/Images/dotConf.svg"); }
+
+.bio-sub {
+  color: #e7600d;
+  text-align: left;
+  padding-left: 0.7rem !important; }
+
+ul.li-tall {
+  padding-left: 1rem;
+  list-style-image: url(../assets/Images/dotConf.svg); }
 
 .a-cris-submenu:hover {
   color: #9a3820;
@@ -437,10 +514,16 @@ a.dropdown-item-blog:hover {
     padding-right: 2rem;
     /*margin-right: 1.2rem;*/ }
 
+  .hide-ad {
+    display: none !important; }
+
   /*bio/cristina*/
   .bio-img-container {
-    padding-left: 2rem;
-    padding-right: 2rem; }
+    padding-left: 2rem !important;
+    padding-right: 2rem !important; }
+
+  .hide-icons {
+    display: none !important; }
 
   .cris-title {
     padding-left: 2rem !important; }
@@ -454,6 +537,25 @@ a.dropdown-item-blog:hover {
   .card-blog-left {
     padding-left: 0.5rem; } }
 @media only screen and (min-width: 993px) {
+  .ad-lg-container {
+    width: 100%; }
+
+  .title-ad {
+    font-size: 1.125rem; }
+
+  .p-ad {
+    font-size: 1.031rem; }
+
+  .in-ad-2 {
+    color: white; }
+
+  .subtitle-ad {
+    font-size: 1.25rem; }
+
+  .button-ad-container {
+    font-size: 1rem;
+    line-height: 20px; }
+
   .carousel-exp {
     height: 520px; }
 
@@ -468,7 +570,9 @@ a.dropdown-item-blog:hover {
     height: 576px; }
 
   .prizes-items {
-    line-height: 45px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    /* line-height: 45px; */
     letter-spacing: 0.16px;
     font-size: 1.125em; }
 
@@ -545,9 +649,15 @@ a.dropdown-item-blog:hover {
     padding-left: 3rem; }
 
   .bio-p-container {
-    padding-right: 0;
-    padding-left: 1rem;
+    padding-right: 0rem;
+    padding-left: 4rem;
     font-size: 0.875rem; }
+
+  .bio-img-container {
+    padding-left: 4rem; }
+
+  .hide-icons-lg {
+    display: none !important; }
 
   .cris-row-cotainer {
     padding-bottom: 5rem !important;
