--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,9 @@ h2 {
 .carousel-indicators {
   bottom: -50px; }
 
+.carousel-blog {
+  margin-right: 21%; }
+
 .carousel-exp {
   background: #f29754;
   box-shadow: 0px 4px 4px #dfd2c7;
@@ -452,8 +455,11 @@ h4 {
 
 .title-body-card {
   font-size: 0.625rem;
-  line-height: 20px;
+  line-height: 12px;
   font-weight: bold; }
+
+.card-title-container {
+  height: 80px; }
 
 .contain-body-card {
   font-size: 0.625rem;
