adding new content to blog

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -790,9 +790,16 @@ a.dropdown-item-blog:hover {
   }
 
   .drop-container {
-    background: #9a3820;
     border-radius: 10px;
     color: white !important;
+  }
+
+  .drop-container-one {
+    background: #f29754;
+  }
+
+  .drop-container-off {
+    background: #9a3820;
   }
 
   .a-cris-submenu {
