--- a/css/style.css
+++ b/css/style.css
@@ -643,9 +643,14 @@ a.dropdown-item-blog:hover {
     color: #f29754 !important; }
 
   .drop-container {
-    background: #9a3820;
     border-radius: 10px;
     color: white !important; }
+
+  .drop-container-one {
+    background: #f29754; }
+
+  .drop-container-off {
+    background: #9a3820; }
 
   .a-cris-submenu {
     font-size: 1.25rem;
