adding image to video

--- a/css/style.css
+++ b/css/style.css
@@ -679,6 +679,9 @@ a.dropdown-item-blog:hover {
     text-align: center;
     padding-left: 0rem; }
 
+  .container-video-course {
+    margin-top: 4.5rem; }
+
   .card-col {
     margin: 0.05rem; } }
 
