--- a/scss/style.scss
+++ b/scss/style.scss
@@ -838,6 +838,11 @@ a.dropdown-item-blog:hover {
     padding-left: 0rem;
   }
 
+  .container-video-course {
+    margin-top:  4.5rem;
+    
+  }
+
   .card-col {
     margin: 0.05rem;
   }
