adding image to video

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,9 @@ h2 {
 .img-rr-footer {
   padding-left: 1.5rem; }
 
+.img-ins-footer {
+  padding-right: 0.1rem; }
+
 .copy-footer {
   padding-left: 3.6rem; }
 
