--- a/scss/style.scss
+++ b/scss/style.scss
@@ -202,6 +202,10 @@ h2 {
   padding-left: 1.5rem;
 }
 
+.img-ins-footer {
+  padding-right: 0.1rem;
+}
+
 .copy-footer {
   padding-left: 3.6rem;
 }
@@ -839,8 +843,7 @@ a.dropdown-item-blog:hover {
   }
 
   .container-video-course {
-    margin-top:  4.5rem;
-    
+    margin-top: 4.5rem;
   }
 
   .card-col {
