--- a/css/style.css
+++ b/css/style.css
@@ -805,5 +805,8 @@ a.dropdown-item-blog:hover {
   .button-ad-container {
     font-size: 1rem;
     line-height: 20px; } }
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  #cristina-section {
+    height: 1100px; } }
 
 /*# sourceMappingURL=style.css.map */
