--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1033,3 +1033,9 @@ a.dropdown-item-blog:hover {
     line-height: 20px;
   }
 }
+
+@media only screen and (min-width: 1024px) and (max-height: 1366px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1.5) {
+  #cristina-section {
+    height: 1100px;
+  }
+}
