--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,11 @@ a.button-ad:hover {
   line-height: 20px;
   letter-spacing: 0.16px; }
 
+.prizes-title {
+  font-size: 2rem;
+  list-style: none;
+  font-weight: bolder; }
+
 .prizes-list {
   background: #ce684f;
   box-shadow: 0px 3px 4px #a07250;
