--- a/scss/style.scss
+++ b/scss/style.scss
@@ -119,6 +119,10 @@ a.button-ad:hover {
   letter-spacing: 0.16px;
 }
 
+.prizes-title{
+  font-size: 2rem; list-style: none; font-weight: bolder;
+}
+
 .prizes-list {
   background: #ce684f;
   box-shadow: 0px 3px 4px #a07250;
