--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ a.button-ad:hover {
   line-height: 20px;
   letter-spacing: 0.16px; }
 
-.prizes-title {
+.prize-title {
   font-size: 2rem;
   list-style: none;
   font-weight: bolder; }
