--- a/scss/style.scss
+++ b/scss/style.scss
@@ -119,8 +119,10 @@ a.button-ad:hover {
   letter-spacing: 0.16px;
 }
 
-.prizes-title{
-  font-size: 2rem; list-style: none; font-weight: bolder;
+.prize-title {
+  font-size: 2rem;
+  list-style: none;
+  font-weight: bolder;
 }
 
 .prizes-list {
